# Terrazzo

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  Cargo.toml  Dockerfile  LICENSE  MODULE.bazel  README.md  TODO.md  all.sh  package-lock.json  package.json  renovate.json  rust-toolchain.toml  sfdsdf  taplo.toml  ubuntu.sh
autoclone/autoclone/: Cargo.toml  README.md
autoclone/autoclone-macro/: Cargo.toml
autoclone/autoclone-macro-tests/: Cargo.toml
autoclone/autoclone-macro-tests/src/: lib.rs
autoclone/autoclone-macro/src/: lib.rs  tests.rs
autoclone/autoclone-tests/: Cargo.toml
autoclone/autoclone/src/: lib.rs
bazel/: BUILD.bazel  README.md  crate_aliases.bzl  crate_client_server.bzl  crate_macro_client.MODULE.bazel  crate_macro_server.MODULE.bazel  crate_macros.MODULE.bazel  crate_macros.bzl  crate_repos.MODULE.bazel  crate_repositories.MODULE.bazel  crates_client.MODULE.bazel  crates_opt_client.MODULE.bazel  crates_server.MODULE.bazel  generated_file.bzl  generated_file.sh  local_node_tools.bzl  macro_crate_repositories.bzl  module_fragment_rules.bzl  playwright_rules.bzl  playwright_setup.sh  playwright_test.sh  rust_rules.bzl  scss_rules.bzl  stylance_rules.bzl  utils.bzl
bazel/client_server_modules/: BUILD.bazel  crate_client_server.bzl  crates_client.MODULE.bazel  crates_client_opt.MODULE.bazel  crates_client_plain.MODULE.bazel  crates_opt_client.MODULE.bazel  crates_opt_server.MODULE.bazel  crates_server.MODULE.bazel  crates_server_opt.MODULE.bazel  crates_server_plain.MODULE.bazel  generated.crates_client_opt.MODULE.bazel  generated.crates_client_plain.MODULE.bazel  generated.crates_server_opt.MODULE.bazel  generated.crates_server_plain.MODULE.bazel
bazel/crate_macros/: BUILD.bazel  crate_macros.bzl  generated.crate_macro_client.MODULE.bazel  generated.crate_macro_server.MODULE.bazel
bazel/crate_universe_deps/: Cargo.toml
bazel/feature-deps/: AGENTS.md  BUILD.bazel  Cargo.toml  defs.bzl  feature-dependencies-generator.md  feature-srcs-generator.md
bazel/feature-deps/src/: args.rs  common.rs  dependency_aliases.rs  deps_generator.rs  error.rs  main.rs  manager.rs  srcs.rs  srcs_generator.rs
bazel/feature_deps/: BUILD.bazel  Cargo.toml  feature-dependencies-generator.md  feature-srcs-generator.md  feature_deps_rules.bzl
bazel/feature_deps/src/: args.rs  error.rs  main.rs  manager.rs  srcs.rs
demo/: BUILD.bazel  Cargo.toml  README.md  build.rs
demo/assets/: bootstrap.js  index.html
demo/assets/favicon/: NOTICE
demo/scripts/: bazel-integration-test.sh  integration-test.sh  integration-test.spec.mjs
demo/src/: assets.rs  backend.rs  demo.rs  frontend.rs  lib.rs  server.rs  style.scss
demo/src/api/: client.rs  server.rs
demo/src/demo/: api.rs  attributes.rs  attributes.scss  counter.rs  timer.rs
game/: BUILD.bazel  Cargo.toml  README.md  build.rs
game/assets/: bootstrap.js  index.html
game/assets/css/: game.css
game/src/: assets.rs  backend.rs  client.rs  frontend.rs  game.rs  game.scss  lib.rs  server.rs
game/src/game/: cookie.rs  cookie.scss  cookies.rs  cookies.scss  position.rs  size.rs  state.rs
pty/: BUILD.bazel  Cargo.toml  README.md
pty/src/: command.rs  lease.rs  lib.rs  pty.rs  raw_pts.rs  raw_pty.rs  release_on_drop.rs  size.rs  tail.rs
terminal/: AGENTS.md  BUILD.bazel  Cargo.toml  README.md  build.rs  feature_deps_labels.bzl  rustc.env  terminal-features.bzl  terminal_assets.bzl  terminal_features.bzl  terminal_rules.bzl
terminal/assets/: bootstrap.js  index.html
terminal/assets/jsdeps/: README.md  package-lock.json  package.json  webpack.config.cjs
terminal/assets/pdfjs/: pdfjs-loader.js  pdfjs.MODULE.bazel
terminal/integration/: BUILD.bazel  Cargo.toml
terminal/integration/src/: exec.rs  lib.rs  server.rs  signal_handler.rs  test_dir.rs  toml.rs
terminal/plans/: config-file-watcher.md  mesh-integration-tests.md  password-update-test.md  pdf-file-editor.md  streaming-conversions.md  streaming-logs-remote.md  streaming-logs.md  synctex-parser-crate.md  tabbed-tiles.md  terminal-api-remote-fn.md  voice-recording.md
terminal/scripts/: integration-test.spec.mjs
terminal/src/: _common.scss  lib.rs  server.rs  terminal_id.rs
terminal/src/api/: client_address.rs  client_name.rs  mod.rs
terminal/src/assets/: icons.rs  install.rs  mod.rs
terminal/src/backend/: agent.rs  cli.rs  daemonize.rs  mod.rs  root_ca_config.rs  server_config.rs  throttling_stream.rs  tls_config.rs
terminal/src/converter/: api.rs  conversion_tabs.rs  conversion_tabs.scss  converter.scss  mod.rs  service.rs  ui.rs
terminal/src/frontend/: input_overlay.rs  input_overlay.scss  login.rs  login.scss  menu.rs  menu.scss  mod.rs  mousemove.rs  remotes.rs  remotes.scss  remotes_ui.rs  remotes_ui.scss  resize_bar.rs  resize_bar.scss  speech_recognition.rs  timestamp.rs
terminal/src/logs/: event.rs  mod.rs  state.rs  stream.rs  subscription.rs  tests.rs  tracing.rs
terminal/src/portforward/: engine.rs  manager.rs  mod.rs  port_forward.scss  schema.rs  state.rs  sync_state.rs  ui.rs
terminal/src/processes/: close.rs  io.rs  list.rs  mod.rs  resize.rs  set_title.rs  (+2 more)
terminal/terrazzo-terminal-tests/: BUILD.bazel  Cargo.toml
terminal/tests/: config-client.toml  config-client2.toml  config-server.toml  integration-test-converter.spec.mjs  integration-test-password-update.spec.mjs  integration-test-terminal.spec.mjs  integration-test-text-editor-basic.spec.mjs  integration-test-text-editor-file-ops.spec.mjs  integration-test-text-editor-upload.spec.mjs  integration-test-text-editor-viewer.spec.mjs  integration-test-text-editor.spec.mjs  mesh_integration_test.rs  run-client.sh  run-client2.sh  run-server.sh  run.sh  text-editor-helpers.mjs
terrazzo/: Cargo.toml  build.rs
terrazzo/assets/: bootstrap.js  index.html
terrazzo/src/: assets.rs  client.rs  server.rs  terminal.rs  terminal.scss  terminal_id.rs
web-terminal/: Cargo.toml
web-terminal/assets/: bootstrap.js  index.html
web-terminal/src/: _common.scss  assets.rs  backend.rs  client.rs  frontend.rs  lib.rs  processes.rs  server.rs  terminal.rs  terminal_id.rs
(+740 files in other folders)
