[workspace]
members = [
    "demo",
    "framework/build",
    "framework/client",
    "framework/macro",
    "framework/terrazzo",
    "remote/client",
    "remote/common",
    "remote/server",
    "utils/autoclone/autoclone-tests",
    "utils/autoclone/autoclone",
    "utils/fixture",
    "utils/nameth/nameth-macro",
    "utils/nameth/nameth-tests",
    "utils/nameth/nameth",
]
resolver = "2"

[workspace.package]
version = "0.1.17"
authors = ["Lamparo <LamparoS@Pavy.one>"]
edition = "2024"
repository = "https://github.com/Terrazzo-Web/Terrazzo"
license = "MIT"
description = """
Lightweight, simple and efficient web UI framework based on Rust and WASM.
"""

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.release]
codegen-units = 1
opt-level = 3            # Optimization level.
debug = false            # Include debug info.
debug-assertions = false # Enables debug assertions.
overflow-checks = false  # Enables runtime integer overflow checks.
lto = "fat"              # Sets link-time optimization.
panic = "abort"          # The panic strategy.
incremental = true       # Incremental compilation.

[profile.release.package.terrazzo-client]
opt-level = "s"

[workspace.dependencies]
autoclone = { version = "0.1.17", path = "utils/autoclone/autoclone" }
nameth = { version = "0.1.17", path = "utils/nameth/nameth" }
nameth-macro = { version = "0.1.17", path = "utils/nameth/nameth-macro" }
terrazzo = { version = "0.1.17", path = "framework/terrazzo", default-features = false }
terrazzo-build = { version = "0.1.17", path = "framework/build" }
terrazzo-client = { version = "0.1.17", path = "framework/client" }
terrazzo-fixture = { version = "0.1.17", path = "utils/fixture" }
terrazzo-macro = { version = "0.1.17", path = "framework/macro" }
trz-gateway-client = { version = "0.1.17", path = "remote/client" }
trz-gateway-common = { version = "0.1.17", path = "remote/common" }
trz-gateway-server = { version = "0.1.17", path = "remote/server" }

axum = { version = "0.8.6" }
axum-server = { version = "0.7.2" }
bytes = { version = "1.10.1" }
cms = { version = "0.2.3" }
darling = { version = "0.21.3" }
dashmap = { version = "6.1.0" }
deluxe = { version = "0.5.0" }
futures = { version = "0.3.31" }
hostname = { version = "0.4.1" }
http = { version = "1.3.1" }
humantime = { version = "2.3.0" }
hyper-util = { version = "0.1.17" }
include_directory = { version = "0.1.1" }
instant-acme = { version = "0.8.3" }
libc = { version = "0.2.177" }
mime = { version = "0.3.17" }
mime_guess = { version = "2.0.5" }
oid-registry = { version = "0.8.1" }
openssl = { version = "0.10.74" }
pem = { version = "3.0.6" }
pin-project = { version = "1.1.10" }
portpicker = { version = "0.1.1" }
prettyplease = { version = "0.2.37" }
proc-macro2 = { version = "1.0.101" }
prost = { version = "0.14.1" }
prost-types = { version = "0.14.1" }
quote = { version = "1.0.41" }
rcgen = { version = "0.14.5" }
reqwest = { version = "0.12.24" }
reqwest-wasm = { version = "0.11.16" }
ring = { version = "0.17.14" }
rsass = { version = "0.29.2" }
rsass-macros = { version = "0.29.0" }
rustix = { version = "1.1.2" }
rustls = { version = "0.23.33" }
rustls-native-certs = { version = "0.8.2" }
scopeguard = { version = "1.2.0" }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.145" }
serde_urlencoded = { version = "0.7.1" }
server_fn_macro = { version = "0.8.7" }
stylance = { version = "0.7.1" }
syn = { version = "2.0.107" }
tempfile = { version = "3.23.0" }
thiserror = { version = "2.0.17" }
tokio = { version = "1.48.0" }
tokio-rustls = { version = "0.26.4" }
tokio-tungstenite = { version = "0.28.0" }
tokio-util = { version = "0.7.16" }
toml = { version = "0.9.8" }
tonic = { version = "0.14.2" }
tonic-prost = { version = "0.14.2" }
tonic-prost-build = { version = "0.14.2" }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.5" }
tracing = { version = "0.1.41" }
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-subscriber = { version = "0.3.20" }
tracing-subscriber-wasm = { version = "0.1.0" }
uuid = { version = "1.18.1" }
wasm-bindgen = { version = "0.2.100" }
wasm-bindgen-futures = { version = "0.4.50" }
wasm-bindgen-test = { version = "0.3.50" }
wasm-streams = { version = "0.4.2" }
web-sys = { version = "0.3.77" }
x509-parser = { version = "0.18.0" }

[workspace.lints.rust]
unused = "deny"
warnings = "deny"
unused_crate_dependencies = "deny"

[workspace.lints.clippy]
enum_variant_names = "allow"
needless_return = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
