[workspace]
members = [
  "bazel/crate_universe_deps",
  "bazel/feature_deps",
  "demo",
  "framework/build",
  "framework/client",
  "framework/macro",
  "framework/terrazzo",
  "game",
  "pty",
  "remote/client",
  "remote/common",
  "remote/server",
  "terminal",
  "terminal/integration",
  "utils/autoclone/autoclone",
  "utils/autoclone/autoclone-tests",
  "utils/css/cli",
  "utils/css/css",
  "utils/css/macro",
  "utils/css/shared",
  "utils/fixture",
  "utils/nameth/nameth",
  "utils/nameth/nameth-macro",
  "utils/nameth/nameth-tests",
  "utils/synctex/cli",
  "utils/synctex/synctex",
  "utils/synctex/sys",
]
resolver = "2"

[workspace.package]
version = "0.2.13"
authors = ["Lamparo <LamparoS@Pavy.one>"]
edition = "2024"
repository = "https://github.com/Terrazzo-Web/Terrazzo"
license = "MIT"
description = """
Lightweight, simple and efficient web UI framework based on Rust and WASM.
"""

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.release]
codegen-units = 1
opt-level = 3            # Optimization level.
debug = false            # Include debug info.
debug-assertions = false # Enables debug assertions.
overflow-checks = false  # Enables runtime integer overflow checks.
lto = "fat"              # Sets link-time optimization.
panic = "abort"          # The panic strategy.
incremental = true       # Incremental compilation.

[profile.release.package.terrazzo-client]
opt-level = "s"

[workspace.dependencies]
autoclone = { version = "0.2.13", path = "utils/autoclone/autoclone" }
nameth = { version = "0.2.13", path = "utils/nameth/nameth" }
nameth-macro = { version = "0.2.13", path = "utils/nameth/nameth-macro" }
terrazzo = { version = "0.2.13", path = "framework/terrazzo", default-features = false }
terrazzo-build = { version = "0.2.13", path = "framework/build" }
terrazzo-client = { version = "0.2.13", path = "framework/client" }
terrazzo-css = { version = "0.2.13", path = "utils/css/css" }
terrazzo-css-cli = { version = "0.2.13", path = "utils/css/cli" }
terrazzo-css-macro = { version = "0.2.13", path = "utils/css/macro" }
terrazzo-css-shared = { version = "0.2.13", path = "utils/css/shared" }
terrazzo-fixture = { version = "0.2.13", path = "utils/fixture" }
terrazzo-macro = { version = "0.2.13", path = "framework/macro" }
terrazzo-pty = { version = "0.2.13", path = "pty" }
terrazzo-synctex = { version = "0.2.13", path = "utils/synctex/synctex" }
terrazzo-synctex-cli = { version = "0.2.13", path = "utils/synctex/cli" }
terrazzo-synctex-sys = { version = "0.2.13", path = "utils/synctex/sys" }
trz-gateway-client = { version = "0.2.13", path = "remote/client" }
trz-gateway-common = { version = "0.2.13", path = "remote/common" }
trz-gateway-server = { version = "0.2.13", path = "remote/server" }

axum = { version = "0.8.9" }
axum-extra = { version = "0.12.6" }
axum-server = { version = "0.8.0" }
base64 = { version = "0.22.1" }
bitflags = { version = "2.13.0" }
bytes = { version = "1.12.1" }
cc = { version = "1.3.0" }
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
clap = { version = "4.6.2", features = ["derive"] }
cms = { version = "0.2.3" }
const_format = { version = "0.2.36" }
darling = { version = "0.23.0" }
dashmap = { version = "6.2.1" }
deluxe = { version = "0.5.0" }
fluent-asserter = { version = "0.1.9" }
futures = { version = "0.3.33" }
heck = { version = "0.5.0" }
hickory-client = { version = "0.25.2", features = ["serde"] }
hostname = { version = "0.4.2" }
http = { version = "1.4.2" }
http-body-util = { version = "0.1.4" }
humantime = { version = "2.4.0" }
hyper = { version = "1.10.1" }
hyper-util = { version = "0.1.20" }
include_directory = { version = "0.1.1" }
instant-acme = { version = "0.8.5" }
inventory = { version = "0.3.24" }
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
libc = { version = "0.2.186" }
lru = { version = "0.18.1" }
mime = { version = "0.3.17" }
mime_guess = { version = "2.0.5" }
nix = { version = "0.31.3" }
notify = { version = "8.2.0" }
oid-registry = { version = "0.8.1" }
openssl = { version = "0.10.81" }
pbkdf2 = { version = "0.13.0" }
pem = { version = "3.0.6" }
pin-project = { version = "1.1.13" }
portpicker = { version = "0.1.1" }
prettyplease = { version = "0.3.0" }
proc-macro2 = { version = "1.0.107" }
prost = { version = "0.14.4" }
prost-types = { version = "0.14.4" }
quote = { version = "1.0.47" }
rcgen = { version = "0.14.8" }
regex = { version = "1.13.1" }
reqwest = { version = "0.13.4" }
reqwest-wasm = { version = "0.11.16" }
ring = { version = "0.17.14" }
rpassword = { version = "7.5.4" }
rsass = { version = "0.29.2" }
rsass-macros = { version = "0.29.0" }
runfiles = { version = "0.2.0" }
rustix = { version = "1.1.4" }
rustls = { version = "0.23.42" }
rustls-native-certs = { version = "0.8.4" }
scopeguard = { version = "1.2.0" }
serde = { version = "1.0.229", features = ["derive", "rc"] }
serde-wasm-bindgen = { version = "0.6.5" }
serde_json = { version = "1.0.150" }
serde_urlencoded = { version = "0.7.1" }
serde_yaml_ng = { version = "0.10.0" }
server_fn = { version = "0.8.13", features = ["browser"] }
server_fn_macro = { version = "0.8.10" }
sha2 = { version = "0.11.0" }
simple_asn1 = { version = "0.6.4" }
siphasher = { version = "1.0.3" }
static_assertions = { version = "1.1.0" }
syn = { version = "3.0.2" }
tantivy = { version = "0.26.1" }
tempfile = { version = "3.27.0" }
thiserror = { version = "2.0.19" }
tls-parser = { version = "0.12.2" }
tokio = { version = "1.52.3" }
tokio-rustls = { version = "0.26.4" }
tokio-stream = { version = "0.1.18" }
tokio-tungstenite = { version = "0.30.0" }
tokio-util = { version = "0.7.18" }
toml = { version = "1.1.3" }
tonic = { version = "0.14.6" }
tonic-prost = { version = "0.14.6" }
tonic-prost-build = { version = "0.14.6" }
tower = { version = "0.5.3" }
tower-http = { version = "0.7.0" }
tower-layer = { version = "0.3.3" }
tracing = { version = "0.1.44" }
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-subscriber = { version = "0.3.23" }
tracing-subscriber-wasm = { version = "0.1.0" }
typed-builder = { version = "0.23.2" }
unescaper = { version = "0.2.0" }
url = { version = "2.5.8" }
uuid = { version = "1.24.0", features = ["fast-rng", "v4"] }
walkdir = { version = "2.5.0" }
wasm-bindgen = { version = "0.2.126" }
wasm-bindgen-cli = { version = "0.2.126" }
wasm-bindgen-futures = { version = "0.4.76" }
wasm-bindgen-test = { version = "0.3.76" }
wasm-streams = { version = "0.5.0" }
web-sys = { version = "0.3.103" }
winnow = { version = "1.0.4" }
x509-parser = { version = "0.18.1" }

[workspace.lints.rust]
unused = "deny"
warnings = "deny"
unused_crate_dependencies = "deny"

[workspace.lints.clippy]
enum_variant_names = "allow"
needless_return = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
