module(name = "terrazzo")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "rules_rust_wasm_bindgen", version = "0.69.0")
bazel_dep(name = "platforms", version = "1.0.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    extra_target_triples = ["wasm32-unknown-unknown"],
    versions = ["1.92.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

register_toolchains("@rules_rust_wasm_bindgen//:default_wasm_bindgen_toolchain")

crates = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crates.render_config(
    default_alias_rule_bzl = "//bazel:crate_aliases.bzl",
    default_alias_rule_name = "cfg_alias",
)
crates.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crates, "crates")

crates_dbg = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crates_dbg.from_cargo(
    name = "crates_plain",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crates_dbg, "crates_plain")

crates_opt = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crates_opt.annotation(
    crate = "tracing",
    crate_features = [
        "max_level_info",
        "release_max_level_info",
    ],
)
crates_opt.from_cargo(
    name = "crates_opt",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crates_opt, "crates_opt")

bindeps = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
bindeps.spec(
    package = "stylance-cli",
    repositories = ["bindeps"],
    version = "=0.7.4",
)
bindeps.annotation(
    crate = "stylance-cli",
    gen_all_binaries = True,
    repositories = ["bindeps"],
)
bindeps.from_specs(
    name = "bindeps",
)
use_repo(bindeps, "bindeps")
