load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load(":crate_client_server.bzl", "crate_client_server_module")
load(":crate_macros.bzl", "crate_macro_module")
load(":playwright_rules.bzl", "playwright_setup")

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "opt",
    values = {"compilation_mode": "opt"},
)

alias(
    name = "stylance",
    actual = "@bindeps//:stylance-cli__stylance",
)

buildifier(
    name = "buildifier",
    lint_mode = "fix",
    mode = "fix",
)

buildifier(
    name = "buildifier_check",
    lint_mode = "warn",
    mode = "check",
)

playwright_setup(
    name = "playwright_setup",
)

exports_files(["playwright_test.sh"])

crate_macro_module(
    name = "crate_macro_client",
    features = [],
)

crate_macro_module(
    name = "crate_macro_server",
    features = [
        "axum",
        "ssr",
    ],
)

crate_client_server_module(
    name = "crates_server",
    server_fn_deps = [
        "@crates//:axum",
        "@crates//:http-body-util",
        "@crates//:hyper",
        "@crates//:inventory",
        "@crates//:tokio",
        "@crates//:tower",
        "@crates//:tower-layer",
    ],
    server_fn_features = [
        "axum",
        "axum-no-default",
        "browser",
        "generic",
        "ssr",
    ],
)

crate_client_server_module(
    name = "crates_client",
    server_fn_features = [
        "browser",
    ],
)

crate_client_server_module(
    name = "crates_opt_server",
    server_fn_deps = [
        "@crates//:axum",
        "@crates//:http-body-util",
        "@crates//:hyper",
        "@crates//:inventory",
        "@crates//:tokio",
        "@crates//:tower",
        "@crates//:tower-layer",
    ],
    server_fn_features = [
        "axum",
        "axum-no-default",
        "browser",
        "generic",
        "ssr",
    ],
    tracing_features = [
        "max_level_info",
        "release_max_level_info",
    ],
)

crate_client_server_module(
    name = "crates_opt_client",
    server_fn_features = [
        "browser",
    ],
    tracing_features = [
        "max_level_info",
        "release_max_level_info",
    ],
)
