load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load(":playwright_rules.bzl", "playwright_setup")

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "opt",
    values = {"compilation_mode": "opt"},
)

alias(
    name = "stylance",
    actual = "@bindeps//:stylance-cli__stylance",
)

buildifier(
    name = "buildifier",
    lint_mode = "fix",
    mode = "fix",
)

buildifier(
    name = "buildifier_check",
    lint_mode = "warn",
    mode = "check",
)

playwright_setup(
    name = "playwright_setup",
)

exports_files([
    "generated_file.sh",
    "playwright_test.sh",
])
