load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_rust_wasm_bindgen//:defs.bzl", "rust_wasm_bindgen_toolchain")
load(":playwright_rules.bzl", "playwright_setup")

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "opt",
    values = {"compilation_mode": "opt"},
)

alias(
    name = "wasm_bindgen_cli",
    actual = "@wasm_bindgen_cli_tool//:wasm-bindgen__bin",
)

rust_wasm_bindgen_toolchain(
    name = "wasm_bindgen_toolchain_impl",
    wasm_bindgen_cli = ":wasm_bindgen_cli",
)

toolchain(
    name = "wasm_bindgen_toolchain",
    toolchain = ":wasm_bindgen_toolchain_impl",
    toolchain_type = "@rules_rust_wasm_bindgen//:toolchain_type",
)

buildifier(
    name = "buildifier",
    lint_mode = "fix",
    mode = "fix",
)

buildifier(
    name = "buildifier_check",
    lint_mode = "warn",
    mode = "check",
)

playwright_setup(
    name = "playwright_setup",
)

exports_files([
    "generated_file.sh",
    "playwright_test.sh",
])
