crates = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crates.render_config(
    default_alias_rule_bzl = "//bazel:crate_aliases.bzl",
    default_alias_rule_name = "cfg_alias",
)
crates.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crates, "crates")

macro_client = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
macro_client.annotation(
    crate = "server_fn_macro",
    repositories = ["macro_client"],
    rustc_env = {
        "SERVER_FN_OVERRIDE_KEY": "tbd",
    },
)

# TODO: use crates.from_cargo
macro_client.spec(
    package = "deluxe",
    repositories = ["macro_client"],
    version = "=0.5.0",
)
macro_client.spec(
    package = "prettyplease",
    repositories = ["macro_client"],
    version = "=0.2.37",
)
macro_client.spec(
    package = "proc-macro2",
    repositories = ["macro_client"],
    version = "=1.0.106",
)
macro_client.spec(
    package = "quote",
    repositories = ["macro_client"],
    version = "=1.0.45",
)
macro_client.spec(
    package = "server_fn_macro",
    repositories = ["macro_client"],
    version = "=0.8.10",
)
macro_client.spec(
    features = [
        "full",
        "visit-mut",
    ],
    package = "syn",
    repositories = ["macro_client"],
    version = "=2.0.117",
)
macro_client.from_specs(
    name = "macro_client",
)
use_repo(macro_client, "macro_client")

macro_server = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
macro_server.annotation(
    crate = "server_fn_macro",
    repositories = ["macro_server"],
    rustc_env = {
        "SERVER_FN_OVERRIDE_KEY": "tbd",
    },
)
macro_server.spec(
    package = "deluxe",
    repositories = ["macro_server"],
    version = "=0.5.0",
)
macro_server.spec(
    package = "prettyplease",
    repositories = ["macro_server"],
    version = "=0.2.37",
)
macro_server.spec(
    package = "proc-macro2",
    repositories = ["macro_server"],
    version = "=1.0.106",
)
macro_server.spec(
    package = "quote",
    repositories = ["macro_server"],
    version = "=1.0.45",
)
macro_server.spec(
    features = [
        "axum",
        "ssr",
    ],
    package = "server_fn_macro",
    repositories = ["macro_server"],
    version = "=0.8.10",
)
macro_server.spec(
    features = [
        "full",
        "visit-mut",
    ],
    package = "syn",
    repositories = ["macro_server"],
    version = "=2.0.117",
)
macro_server.from_specs(
    name = "macro_server",
)
use_repo(macro_server, "macro_server")

crates_server = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crates_server.annotation(
    crate = "server_fn",
    crate_features = [
        "axum",
        "axum-no-default",
        "browser",
        "generic",
        "ssr",
    ],
    repositories = ["crates_server"],
    deps = [
        "@crates//:axum",
        "@crates//:http-body-util",
        "@crates//:hyper",
        "@crates//:inventory",
        "@crates//:tokio",
        "@crates//:tower",
        "@crates//:tower-layer",
    ],
)
crates_server.from_cargo(
    name = "crates_server",
    cargo_lockfile = "//bazel:Cargo.backend.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crates_server, "crates_server")

crates_client = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crates_client.annotation(
    crate = "server_fn",
    crate_features = [
        "browser",
    ],
    repositories = ["crates_client"],
)
crates_client.from_cargo(
    name = "crates_client",
    cargo_lockfile = "//bazel:Cargo.frontend.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crates_client, "crates_client")

crates_opt_server = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crates_opt_server.annotation(
    crate = "server_fn",
    crate_features = [
        "axum",
        "axum-no-default",
        "browser",
        "generic",
        "ssr",
    ],
    repositories = ["crates_opt_server"],
    deps = [
        "@crates//:axum",
        "@crates//:http-body-util",
        "@crates//:hyper",
        "@crates//:inventory",
        "@crates//:tokio",
        "@crates//:tower",
        "@crates//:tower-layer",
    ],
)
crates_opt_server.annotation(
    crate = "tracing",
    crate_features = [
        "max_level_info",
        "release_max_level_info",
    ],
    repositories = ["crates_opt_server"],
)
crates_opt_server.from_cargo(
    name = "crates_opt_server",
    cargo_lockfile = "//bazel:Cargo.backend.opt.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crates_opt_server, "crates_opt_server")

crates_opt_client = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crates_opt_client.annotation(
    crate = "server_fn",
    crate_features = [
        "browser",
    ],
    repositories = ["crates_opt_client"],
)
crates_opt_client.annotation(
    crate = "tracing",
    crate_features = [
        "max_level_info",
        "release_max_level_info",
    ],
    repositories = ["crates_opt_client"],
)
crates_opt_client.from_cargo(
    name = "crates_opt_client",
    cargo_lockfile = "//bazel:Cargo.frontend.opt.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crates_opt_client, "crates_opt_client")

bindeps = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
bindeps.spec(
    package = "stylance-cli",
    repositories = ["bindeps"],
    version = "=0.7.4",
)
bindeps.annotation(
    crate = "stylance-cli",
    gen_all_binaries = True,
    repositories = ["bindeps"],
)
bindeps.from_specs(
    name = "bindeps",
)
use_repo(bindeps, "bindeps")
